--- a/index.html
+++ b/index.html
@@ -1,46 +1,50 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Protofolio</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    
- 
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Wellcome</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Home - Portfolio</title>
+		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<script defer src="js/fontawesome-all.min.js"></script>
+	</head>
+	<body>
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<div class="container">
+				<a class="navbar-brand" href="index.html">
+					<img class="rounded-circle align-middle me-2" src="img/50x50.png" alt="Profile Picture">
+					Portfolio
+				</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbar">
+					<ul class="navbar-nav ms-auto">
+						<li class="nav-item active" aria-current="page">
+							<a class="nav-link" href="index.html">Home</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="portfolio-overview.html">Portfolio</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+        <div class="container mt-4">
+			<h2 class="display-4 mb-4">
+				Firstname Lastname
+				<small class="d-block text-muted">Job Position</small>
+			</h2>
+			<div class="row mb-4">
+				<div class="col-12 col-lg-6 mb-4 mb-lg-0">
+					<img class="img-fluid rounded" src="img/690x400.png">
+				</div>
+				<div class="col-12 col-lg-6">
+					<h3>About</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi pulvinar purus vitae nisl semper, a ornare purus euismod. Quisque id dapibus ligula, vel finibus lectus. Aliquam neque diam, iaculis non arcu a, fringilla viverra libero. Mauris pharetra quis nulla eget fermentum. In nec dapibus nisl, sit amet convallis nisl. Duis non urna et dui scelerisque volutpat vel sit amet lectus. Praesent vel malesuada erat. Nulla eu accumsan tellus.</p>
+					<p>Sed vehicula, urna non cursus cursus, arcu urna eleifend erat, eget egestas nulla mauris et elit. Mauris et augue sed odio tristique blandit. Ut consequat, massa id interdum convallis, nisi nisi rhoncus erat, blandit laoreet mauris ipsum interdum felis. Aenean tincidunt lacus lectus, sed dapibus diam ultricies sed. Mauris auctor tempor elit, blandit efficitur orci. Duis quam lacus, commodo at odio sit amet, maximus laoreet nulla. Nullam eget tortor ac lacus vehicula ultricies. Mauris mattis quam sit amet lectus egestas, interdum ullamcorper massa vestibulum. Ut in tincidunt ligula. Nunc tortor diam, eleifend quis varius rhoncus, commodo id nisi. In in malesuada nunc.</p>
+				</div>
+			</div>
+        <script src="js/bootstrap.bundle.min.js"></script>
     
 </body>
 </html>
