add the contact section

--- a/index.html
+++ b/index.html
@@ -44,6 +44,151 @@
 					<p>Sed vehicula, urna non cursus cursus, arcu urna eleifend erat, eget egestas nulla mauris et elit. Mauris et augue sed odio tristique blandit. Ut consequat, massa id interdum convallis, nisi nisi rhoncus erat, blandit laoreet mauris ipsum interdum felis. Aenean tincidunt lacus lectus, sed dapibus diam ultricies sed. Mauris auctor tempor elit, blandit efficitur orci. Duis quam lacus, commodo at odio sit amet, maximus laoreet nulla. Nullam eget tortor ac lacus vehicula ultricies. Mauris mattis quam sit amet lectus egestas, interdum ullamcorper massa vestibulum. Ut in tincidunt ligula. Nunc tortor diam, eleifend quis varius rhoncus, commodo id nisi. In in malesuada nunc.</p>
 				</div>
 			</div>
+            <h3>Featured Projects</h3>
+			<div class="row mb-4">
+				<div class="col-12 col-md-6 col-xl-3 mb-4">
+					<a href="portfolio-item.html">
+						<figure class="figure">
+							<img class="figure-img img-fluid img-thumbnail" src="img/510x400.png" alt="Portfolio Item Heading">
+							<figccaption class="figure-caption">Portfolio Item Heading</figccaption>
+						</figure>
+					</a>
+				</div>
+				<div class="col-12 col-md-6 col-xl-3 mb-4">
+					<a href="portfolio-item.html">
+						<figure class="figure">
+							<img class="figure-img img-fluid img-thumbnail" src="img/510x400.png" alt="Portfolio Item Heading">
+							<figccaption class="figure-caption">Portfolio Item Heading</figccaption>
+						</figure>
+					</a>
+				</div>
+				<div class="col-12 col-md-6 col-xl-3 mb-4">
+					<a href="portfolio-item.html">
+						<figure class="figure">
+							<img class="figure-img img-fluid img-thumbnail" src="img/510x400.png" alt="Portfolio Item Heading">
+							<figccaption class="figure-caption">Portfolio Item Heading</figccaption>
+						</figure>
+					</a>
+				</div>
+				<div class="col-12 col-md-6 col-xl-3 mb-4">
+					<a href="portfolio-item.html">
+						<figure class="figure">
+							<img class="figure-img img-fluid img-thumbnail" src="img/510x400.png" alt="Portfolio Item Heading">
+							<figccaption class="figure-caption">Portfolio Item Heading</figccaption>
+						</figure>
+					</a>
+				</div>
+			</div>
+			<h3>Testimonials</h3>
+			<div class="row mb-4">
+				<div class="col-12 col-lg-4">
+					<figure>
+						<blockquote class="blockquote">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi pulvinar purus vitae nisl semper, a ornare purus euismod. Quisque id dapibus ligula, vel finibus lectus. Aliquam neque diam, iaculis non arcu a, fringilla viverra libero.</p>
+						</blockquote>
+						<figcaption class="blockquote-footer">Firstname Lastname</figcaption>
+					</figure>
+				</div>
+				<div class="col-12 col-lg-4">
+					<figure>
+						<blockquote class="blockquote">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi pulvinar purus vitae nisl semper, a ornare purus euismod. Quisque id dapibus ligula, vel finibus lectus. Aliquam neque diam, iaculis non arcu a, fringilla viverra libero.</p>
+						</blockquote>
+						<figcaption class="blockquote-footer">Firstname Lastname</figcaption>
+					</figure>
+				</div>
+				<div class="col-12 col-lg-4">
+					<figure>
+						<blockquote class="blockquote">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi pulvinar purus vitae nisl semper, a ornare purus euismod. Quisque id dapibus ligula, vel finibus lectus. Aliquam neque diam, iaculis non arcu a, fringilla viverra libero.</p>
+						</blockquote>
+						<figcaption class="blockquote-footer">Firstname Lastname</figcaption>
+					</figure>
+				</div>
+			</div>
+			<h3>Contact Me</h3>
+			<form class="mb-4">
+				<div class="row">
+					<div class="col-12 col-md-6">
+						<div class="mb-3">
+							<label for="name" class="form-label">Name</label>
+							<input id="name" type="text" class="form-control" placeholder="Enter your name">
+						</div>
+						<div class="mb-3">
+							<label for="email" class="form-label">Email</label>
+							<input id="email" type="email" class="form-control" placeholder="Enter your email">
+						</div>
+					</div>
+					<div class="col-12 col-md-6">
+						<div class="mb-3">
+							<label for="message" class="form-label">Message</label>
+							<textarea id="message" class="form-control" rows="4" placeholder="Enter your message"></textarea>
+						</div>
+					</div>
+				</div>
+				<button type="submit" class="btn btn-primary">Send Message</button>
+			</form>
+		</div>
+		<footer class="bg-light py-4">
+			<div class="container">
+				<div class="row">
+					<div class="col-12 col-md-6 col-xl-3">
+						<div class="d-flex align-items-center mb-2">
+							<div class="fa-layers fa-fw fa-2x me-1">
+								<i class="fas fa-circle text-muted"></i>
+								<i class="fas fa-code text-white" data-fa-transform="shrink-10"></i>
+							</div>
+							<h5 class="m-0">Code</h5>
+						</div>
+						<ul class="list-unstyled">
+							<li><i class="fab fa-fw fa-github text-muted"></i> <a href="#0">GitHub</a></li>
+							<li><i class="fab fa-fw fa-codepen text-muted"></i> <a href="#0">CodePen</a></li>
+							<li><i class="fab fa-fw fa-stack-overflow text-muted"></i> <a href="#0">Stack Overflow</a></li>
+						</ul>
+					</div>
+					<div class="col-12 col-md-6 col-xl-3">
+						<div class="d-flex align-items-center mb-2">
+							<div class="fa-layers fa-fw fa-2x me-1">
+								<i class="fas fa-circle text-muted"></i>
+								<i class="fas fa-paint-brush text-white" data-fa-transform="shrink-10"></i>
+							</div>
+							<h5 class="m-0">Design</h5>
+						</div>
+						<ul class="list-unstyled">
+							<li><i class="fab fa-fw fa-behance text-muted"></i> <a href="#0">Behance</a></li>
+							<li><i class="fab fa-fw fa-dribbble text-muted"></i> <a href="#0">Dribbble</a></li>
+						</ul>
+					</div>
+					<div class="col-12 col-md-6 col-xl-3">
+						<div class="d-flex align-items-center mb-2">
+							<div class="fa-layers fa-fw fa-2x me-1">
+								<i class="fas fa-circle text-muted"></i>
+								<i class="fas fa-images text-white" data-fa-transform="shrink-10"></i>
+							</div>
+							<h5 class="m-0">Photography</h5>
+						</div>
+						<ul class="list-unstyled">
+							<li><i class="fab fa-fw fa-flickr text-muted"></i> <a href="#0">Flickr</a></li>
+							<li><i class="fab fa-fw fa-instagram text-muted"></i> <a href="#0">Instagram</a></li>
+						</ul>
+					</div>
+					<div class="col-12 col-md-6 col-xl-3">
+						<div class="d-flex align-items-center mb-2">
+							<div class="fa-layers fa-fw fa-2x me-1">
+								<i class="fas fa-circle text-muted"></i>
+								<i class="fas fa-video text-white" data-fa-transform="shrink-10"></i>
+							</div>
+							<h5 class="m-0">Video</h5>
+						</div>
+						<ul class="list-unstyled">
+							<li><i class="fab fa-fw fa-youtube text-muted"></i> <a href="#0">YouTube</a></li>
+							<li><i class="fab fa-fw fa-vimeo text-muted"></i> <a href="#0">Vimeo</a></li>
+						</ul>
+					</div>
+				</div>
+				<p class="text-center mb-0">&copy; 2020 Firstname Lastname. All rights reserved.</p>
+			</div>
+		</footer>
         <script src="js/bootstrap.bundle.min.js"></script>
     
 </body>
