--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Home - Portfolio</title>
+		<title>Bootstrap-Prototype-Version</title>
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<script defer src="js/fontawesome-all.min.js"></script>
 	</head>
