add social media links

--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
 							<h5 class="m-0">Code</h5>
 						</div>
 						<ul class="list-unstyled">
-							<li><i class="fab fa-fw fa-github text-muted"></i> <a href="#0">GitHub</a></li>
-							<li><i class="fab fa-fw fa-codepen text-muted"></i> <a href="#0">CodePen</a></li>
-							<li><i class="fab fa-fw fa-stack-overflow text-muted"></i> <a href="#0">Stack Overflow</a></li>
+							<li><i class="fab fa-fw fa-github text-muted"></i> <a href="https://github.com/ZuhRa-HashiMi">GitHub</a></li>
+							<li><i class="fab fa-fw fa-codepen text-muted"></i> <a href="https://www.linkedin.com/in/zuhra-hashimi-601966214/">linkedin</a></li>
+							<li><i class="fab fa-fw fa-stack-overflow text-muted"></i> <a href="https://twitter.com/ZuhraHashimi4">Twitter</a></li>
 						</ul>
 					</div>
 					<div class="col-12 col-md-6 col-xl-3">
